cluster/220-software-development/gitlab/ingress/registry-direct-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: direct-gitlab-registry
  namespace: gitlab
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: "gitlab-direct-rewritebody@kubernetescrd,gitlab-direct-rewriteheaders@kubernetescrd"
spec:
  tls:
    - secretName: "direct-${SECRET_DOMAIN/./-}-tls"
  rules:
    - host: "registry-gitlab.direct.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: gitlab-registry
                port:
                  number: 5000
